kubesphere/kubesphere-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress  
metadata:
  name: oke-kubesphere-ingress
  namespace: kubesphere-system
  #annotations:
    # 开启use-regex，启用path的正则匹配
    #nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  #tls:
  #- hosts:
  #  - oke-kuboard.example.com
  #  secretName: tls-secret
  rules:
  - host: "oke-kubesphere.example.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ks-console
            port:
              number: 80
